[package]
name = "bazaar_ex"
version = "0.1.0"
edition = "2018"

[[bin]]  # <- binary target
name = "bazaar_ex"
path = "src/main.rs"

[dependencies]
fluence = { version = "=0.5.0", features = ["logger"] }
log = "0.4.14"
fce-sqlite-connector = "=0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
