[package]
name = "bazaar_ex"
version = "0.1.0"
edition = "2018"

[[bin]]  # <- binary target
name = "bazaar_ex"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "=0.6.10", features = ["logger"]}
log = "0.4.14"
marine-sqlite-connector = "0.5.0"
rand = "0.7.0"
hex = "0.4.3"
ethereum-types = "0.11.0"
web3 = { path = "./web3" }
ethabi = "14.1.0"
serde_json = "1.0.59"
ethereum-tx-sign = { path = "./ethereum-tx-sign" }
libsecp256k1 = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
