[package]
name = "curl_adapter"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "curl_adapter"

[dependencies]
marine-rs-sdk = { version = "=0.6.10", features = ["logger"] }
log = "0.4.14"
