[package]
name = "ethereum-tx-sign"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.9"
libsecp256k1 = "0.5.0"
rlp = "0.4"
num-traits = "0.2"
tiny-keccak = "2.0.2"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.59"
hex = "0.4.3"
