[package]
name = "web3"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
marine-rs-sdk = { version = "=0.6.10", features = ["logger"]}
log = "0.4.8"
ethereum-types = "0.11.0"
ethabi = "14.1.0"
hex = "0.4.3"
marine-sqlite-connector = "0.5.0"
jsonrpc-core = "17.1.0"